[gd_scene load_steps=37 format=3 uid="uid://dstmp1njye2ow"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_a8op3"]
[ext_resource type="Texture2D" uid="uid://oaswrjpj5hsu" path="res://Images/Misc/MagnetCrosshair.png" id="2_e1rhe"]
[ext_resource type="Texture2D" uid="uid://bd1xj8454waa1" path="res://Images/Robots/Player/MagnetPlayerLeg1.png.png" id="4_l2ker"]
[ext_resource type="Texture2D" uid="uid://dv40hxb24c6mr" path="res://Images/Robots/Player/MagnetPlayerLeg2.png.png" id="5_nsqie"]
[ext_resource type="Texture2D" uid="uid://h76tshoitma2" path="res://Images/Robots/Player/MagnetPlayerHead.png" id="7_68k5k"]
[ext_resource type="Texture2D" uid="uid://c8k8u8kpohg3m" path="res://Images/Robots/Player/MagnetPlayerBody.png.png" id="7_t0omk"]
[ext_resource type="Texture2D" uid="uid://b4gebqgcsmhhg" path="res://Images/Robots/Player/MagnetPlayerFootLeft.png.png" id="7_wmrv7"]
[ext_resource type="Texture2D" uid="uid://updxgv2rpjqi" path="res://Images/Robots/Player/MagnetPlayerFootRight.png.png" id="8_j0krk"]
[ext_resource type="Texture2D" uid="uid://cwnqp7pd6oi8w" path="res://Images/Robots/Player/MagnetPlayerArmLeft.png.png" id="10_wlwvg"]
[ext_resource type="Texture2D" uid="uid://buuf2a0sgntf" path="res://Images/Robots/Player/MagnetPlayerHandLeft.png.png" id="11_l5qus"]
[ext_resource type="Texture2D" uid="uid://r07h4egjuygd" path="res://Images/Robots/Player/MagnetPlayerArmRight.png.png" id="12_w7rjd"]
[ext_resource type="Texture2D" uid="uid://b31vylttdtqkr" path="res://Images/Robots/Player/MagnetPlayerHandRight.png.png" id="13_6w64g"]
[ext_resource type="AudioStream" uid="uid://vpbxhkx05cc3" path="res://Audio/SFX/robot_walk.mp3" id="14_0d36c"]
[ext_resource type="AudioStream" uid="uid://cnk2pedyb8oxt" path="res://Audio/SFX/WakeUpBeepV2.mp3" id="14_hqsdv"]
[ext_resource type="Texture2D" uid="uid://don43l75ynjj2" path="res://Images/Robots/Player/MagnetPlayerJoint.png" id="14_pld1g"]
[ext_resource type="AudioStream" uid="uid://g3ayccoce5y0" path="res://Audio/SFX/WakeUpWhir.mp3" id="15_qhprv"]
[ext_resource type="AudioStream" uid="uid://nwwoe7ieaj08" path="res://Audio/SFX/MagnetHum.mp3" id="15_u5pkj"]
[ext_resource type="AudioStream" uid="uid://yoyovyg8qlkm" path="res://Audio/SFX/PlayerJump.mp3" id="16_sul11"]
[ext_resource type="Texture2D" uid="uid://7m2jsk3a2rln" path="res://Images/Misc/DeathParticleV3.png" id="16_xcg0q"]
[ext_resource type="AudioStream" uid="uid://mnnaqo3ab71y" path="res://Audio/SFX/PlayerHit.mp3" id="17_hgxw8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0xp6"]
size = Vector2(33, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7jqb"]
size = Vector2(2000, 2000)

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_tq04r"]
resource_name = "RightArm"
target_nodepath = NodePath("../Targets/RightArmTarget")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Torso/RightArm")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Torso/RightArm/RightHand")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_7foru"]
resource_name = "LeftLeg"
target_nodepath = NodePath("../Targets/LeftLegTarget")
joint_one_bone_idx = 4
joint_one_bone2d_node = NodePath("Torso/LeftLeg")
joint_two_bone_idx = 5
joint_two_bone2d_node = NodePath("Torso/LeftLeg/LeftBottomLeg")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_603su"]
resource_name = "RightLeg"
target_nodepath = NodePath("../Targets/RightLegTarget")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/RightLeg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/RightLeg/RightBottomLeg")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_1hd4j"]
resource_name = "LeftArm"
target_nodepath = NodePath("../Targets/LeftArmTarget")
flip_bend_direction = true
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/LeftArm")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/LeftArm/LeftHand")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_fb33g"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_tq04r")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_7foru")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_603su")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_1hd4j")

[sub_resource type="Animation" id="Animation_k5xto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/Head/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_m16sh"]
resource_name = "dead"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.29147]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/RightArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.330117]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso/RightArm/RightHand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.586732]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Torso/LeftArm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.780802]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skeleton2D/Torso/LeftArm/LeftHand:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.488242]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/Torso/LeftLeg:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0329363]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Skeleton2D/Torso/LeftLeg/LeftBottomLeg:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.853686]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Skeleton2D/Torso/RightLeg:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.725826]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Skeleton2D/Torso/RightLeg/RightBottomLeg:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.767745]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Skeleton2D/Torso/Head/Sprite2D:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_30nlg"]
resource_name = "idle"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.01, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.358002, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/LeftLeg/LeftBottomLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.01, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.731203, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso/RightLeg:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.01, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.347299, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Torso/RightLeg/RightBottomLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.623073, 0.0]
}

[sub_resource type="Animation" id="Animation_pa17m"]
resource_name = "jump_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.108532, -0.0484964, 0.108532]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/LeftLeg/LeftBottomLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.883279, 1.29861, 0.883279]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso/RightLeg:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.598691, -0.82306, -0.598691]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Torso/RightLeg/RightBottomLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.19931, 1.59971, 1.19931]
}

[sub_resource type="Animation" id="Animation_b5i5a"]
resource_name = "jump_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.28445, 0.257577, 0.28445]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/LeftLeg/LeftBottomLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.358593, 0.56431, 0.358593]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso/RightLeg:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0715533, -0.27253, -0.0715533]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Torso/RightLeg/RightBottomLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.483162, 0.864785, 0.483162]
}

[sub_resource type="Animation" id="Animation_rp2kf"]
resource_name = "wake_up"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.38754, -1.38754, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Targets/LeftArmTarget:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(36, 56), Vector2(36, 56), Vector2(-28, 48)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Targets/RightArmTarget:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(72, -12), Vector2(72, -12), Vector2(68, 16)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Targets/LeftLegTarget:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(76, 52), Vector2(76, 52), Vector2(-12, 68)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Targets/RightLegTarget:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(100, 20), Vector2(100, 20), Vector2(52, 56)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skeleton2D/Torso/Head/Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.5, 4, 4.5, 5.5, 5.8, 6.1, 6.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 4, 5, 4]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AudioPlayers/WakeUp")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_hqsdv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_hqsdv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("14_hqsdv")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("15_qhprv")
}],
"times": PackedFloat32Array(3.5, 4, 4.5, 7)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_44v4a"]
resource_name = "walk"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/Torso/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.418224, -0.0914892, -0.781125, -0.918014, -0.370891, -0.570727, 0.0554985, 0.165149, 0.418224]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skeleton2D/Torso/LeftLeg/LeftBottomLeg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.941138, 1.30811, 1.52142, -5.96046e-08, 0.613751, 0.0, 1.49018e-08, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skeleton2D/Torso/RightLeg:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.35299, -0.466407, 0.0, 0.174672, 0.321751, 0.184008, -0.0310785, -0.812801, -0.35299]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skeleton2D/Torso/RightLeg/RightBottomLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.483272, 0.0, 0.0, -2.98027e-08, 0.896661, 1.25142, 1.17292, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oelyk"]
_data = {
"RESET": SubResource("Animation_k5xto"),
"dead": SubResource("Animation_m16sh"),
"idle": SubResource("Animation_30nlg"),
"jump_down": SubResource("Animation_pa17m"),
"jump_up": SubResource("Animation_b5i5a"),
"wake_up": SubResource("Animation_rp2kf"),
"walk": SubResource("Animation_44v4a")
}

[sub_resource type="Curve" id="Curve_4oocg"]
max_value = 20.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 20), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D"]
collision_mask = 22
platform_on_leave = 2
script = ExtResource("1_a8op3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -3.5)
shape = SubResource("RectangleShape2D_q0xp6")

[node name="ResetArea" type="Area2D" parent="."]
visible = false
collision_mask = 144

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetArea"]
shape = SubResource("RectangleShape2D_j7jqb")

[node name="Crosshair" type="Sprite2D" parent="."]
position = Vector2(0, 9)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_e1rhe")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCastDown" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 1000)
collision_mask = 50

[node name="RayCastUp" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -1000)
collision_mask = 50

[node name="RayCastLeft" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(-1000, 0)
collision_mask = 50

[node name="RayCastRight" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(1000, 0)
collision_mask = 50

[node name="Skeleton2D" type="Skeleton2D" parent="."]
scale = Vector2(0.25, 0.25)
modification_stack = SubResource("SkeletonModificationStack2D_fb33g")

[node name="Torso" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)
editor_settings/show_bone_gizmo = false
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso"]
position = Vector2(2, 0)
texture = ExtResource("7_t0omk")

[node name="RightArm" type="Bone2D" parent="Skeleton2D/Torso"]
show_behind_parent = true
position = Vector2(16, -20)
rotation = 0.330117
scale = Vector2(0.999908, 0.999908)
rest = Transform2D(0.954231, 0.298896, -0.298896, 0.954231, 16, -20)
auto_calculate_length_and_angle = false
length = 38.8973
bone_angle = 39.477
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightArm"]
position = Vector2(11, 12)
texture = ExtResource("12_w7rjd")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightArm/Sprite2D"]
show_behind_parent = true
position = Vector2(16, 16)
texture = ExtResource("14_pld1g")

[node name="RightHand" type="Bone2D" parent="Skeleton2D/Torso/RightArm"]
position = Vector2(27, 28)
rotation = -0.586732
scale = Vector2(0.999998, 0.999998)
rest = Transform2D(0.912021, -0.410143, 0.410143, 0.912021, 27, 28)
auto_calculate_length_and_angle = false
length = 31.0
bone_angle = 50.0
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightArm/RightHand"]
position = Vector2(16, 19)
texture = ExtResource("13_6w64g")

[node name="Head" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-2, -30)
scale = Vector2(0.999997, 0.999997)
rest = Transform2D(0.999997, 0, 0, 0.999997, -2, -30)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(2, -34)
texture = ExtResource("7_68k5k")
hframes = 3
vframes = 3

[node name="LeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
show_behind_parent = true
position = Vector2(-12, 32)
scale = Vector2(0.999922, 0.999922)
rest = Transform2D(1, 0, 0, 1, -12, 32)
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftLeg"]
position = Vector2(0, 8)
texture = ExtResource("4_l2ker")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftLeg/Sprite2D"]
show_behind_parent = true
position = Vector2(0, 16)
texture = ExtResource("14_pld1g")

[node name="LeftBottomLeg" type="Bone2D" parent="Skeleton2D/Torso/LeftLeg"]
position = Vector2(0, 25)
rotation = 0.853686
scale = Vector2(0.999953, 0.999953)
rest = Transform2D(1, 0, 0, 1, 0, 25)
auto_calculate_length_and_angle = false
length = 35.0
bone_angle = 90.0
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftLeg/LeftBottomLeg"]
position = Vector2(0, 15)
texture = ExtResource("5_nsqie")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftLeg/LeftBottomLeg/Sprite2D"]
position = Vector2(4, 15)
texture = ExtResource("7_wmrv7")

[node name="RightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
show_behind_parent = true
position = Vector2(12, 28)
rotation = -0.725826
scale = Vector2(0.999907, 0.999907)
rest = Transform2D(1, 0, 0, 1, 12, 28)
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightLeg"]
position = Vector2(0, 12)
texture = ExtResource("4_l2ker")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightLeg/Sprite2D"]
show_behind_parent = true
position = Vector2(0, 16)
texture = ExtResource("14_pld1g")

[node name="RightBottomLeg" type="Bone2D" parent="Skeleton2D/Torso/RightLeg"]
position = Vector2(0, 28)
rotation = 0.767745
scale = Vector2(0.999979, 0.999979)
rest = Transform2D(1, 0, 0, 1, 0, 28)
auto_calculate_length_and_angle = false
length = 35.0
bone_angle = 90.0
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightLeg/RightBottomLeg"]
position = Vector2(0, 16)
texture = ExtResource("5_nsqie")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/RightLeg/RightBottomLeg/Sprite2D"]
position = Vector2(4, 15)
texture = ExtResource("8_j0krk")

[node name="LeftArm" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-14, -19)
rotation = 0.780802
scale = Vector2(0.999994, 0.999994)
rest = Transform2D(0.999708, -0.0241251, 0.0241251, 0.999708, -14, -19)
auto_calculate_length_and_angle = false
length = 42.4264
bone_angle = 135.0
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftArm"]
position = Vector2(-11, 11)
texture = ExtResource("10_wlwvg")

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftArm/Sprite2D"]
show_behind_parent = true
position = Vector2(-19, 19)
texture = ExtResource("14_pld1g")

[node name="LeftHand" type="Bone2D" parent="Skeleton2D/Torso/LeftArm"]
position = Vector2(-30, 30)
rotation = 0.488242
scale = Vector2(0.999999, 0.999999)
rest = Transform2D(0.998671, 0.0515386, -0.0515386, 0.998671, -30, 30)
auto_calculate_length_and_angle = false
length = 31.0
bone_angle = 50.0
editor_settings/show_bone_gizmo = false

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/LeftArm/LeftHand"]
position = Vector2(16, 20)
texture = ExtResource("11_l5qus")

[node name="Targets" type="Node2D" parent="."]
scale = Vector2(0.25, 0.25)

[node name="LeftArmTarget" type="Marker2D" parent="Targets"]
position = Vector2(-28, 48)

[node name="RightArmTarget" type="Marker2D" parent="Targets"]
position = Vector2(68, 16)

[node name="LeftLegTarget" type="Marker2D" parent="Targets"]
position = Vector2(-12, 68)

[node name="RightLegTarget" type="Marker2D" parent="Targets"]
position = Vector2(52, 56)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oelyk")
}

[node name="AudioPlayers" type="Node" parent="."]

[node name="Walk" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("14_0d36c")
volume_db = -20.0
bus = &"SFX"

[node name="Magnet" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("15_u5pkj")
volume_db = -20.0
bus = &"SFX"

[node name="Jump" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("16_sul11")
volume_db = -15.0
bus = &"SFX"

[node name="WakeUp" type="AudioStreamPlayer" parent="AudioPlayers"]

[node name="Hit" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("17_hgxw8")
volume_db = -10.0
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]

[node name="DeathBuffer" type="Timer" parent="."]
wait_time = 2.1

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 2
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
local_coords = true
texture = ExtResource("16_xcg0q")
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_4oocg")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DeathBuffer" to="." method="_on_death_buffer_timeout"]
